<resources>
    <string name="app_name">Monitora</string>
    <!--MONITORA API-->
    <string name="base_url">https://monitora-pro.herokuapp.com/</string>
    <string name="login">users/login</string>
    <string name="update_user">users/search/</string>
    <string name="get_patients">patient/medic/</string>
    <string name="muestra">traige/</string>
    <string name="search_triage">traige/search/</string>
    <string name="username_body">username</string>
    <string name="password_body">password</string>
    <string name="get_messages_patient">messages/patient/</string>
    <string name="get_messages_medic">messages/medic/</string>
    <string name="get_read_message_patient">messages/view/patient/</string>
    <string name="get_read_message_medic">messages/view/medic/</string>
    <string name="get_inbox_patient">inbox/patient/</string>
    <string name="post_message">inbox/</string>
    <!--Bluetooth-->
    <string name="name_device">My Oximeter</string>
    <!--Oximetro-->
    <string name="servicio_oximetero">cdeacb80-5235-4c07-8846-93a37ee6b86d</string>
    <string name="caracteristica_oximetro">cdeacb81-5235-4c07-8846-93a37ee6b86d</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_patient">PatientActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_profile_patient">ProfilePatient</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="espere">Cargando ...</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="error_sesion">Error en inicio de sesión</string>
    <string name="verifique_datos">Verifique sus datos</string>
    <string name="title_activity_paciente_main">Monitora</string>
    <string name="title_activity_medico_main">Monitora</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="perfil">Perfil</string>
    <string name="dash">Tomas</string>
    <string name="inbox">Inbox</string>
    <string name="home">Muestra</string>
    <string name="error_fatal">Error fatal</string>
    <string name="No_bluetooth">No se encuentra bluetooth en el dispositivo</string>
    <string name="title_activity_muestra_oximetria">Monitora</string>
    <string name="address">Address</string>
    <string name="ob_medicos">Obteniendo datos médicos</string>
    <string name="pulso">Pulso</string>
    <string name="spo2">Spo2</string>
    <string name="value_0">0</string>
    <string name="Peso">Peso</string>
    <string name="gluco">Gluco</string>
    <string name="anotaciones">Anotaciones</string>
    <string name="notas">¿Como te sientes?</string>
    <string name="no_hay_datos">No hay registros</string>
    <string name="registro_guardado">¡Tu toma a sido enviada!</string>
    <string name="registro_no_guardado">Envío fallido</string>
    <string name="activity">Activity</string>
    <string name="messages">Mensajes</string>
    <string name="title_activity_vista_paciente_medico">Monitora</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="paciente">Paciente</string>
    <string name="de">de</string>
    <string name="Asunto">Asunto</string>
    <string name="asunto">Asunto</string>
    <string name="descripccion">¿Que le quieres decir a tu paciente?</string>
    <string name="mensaje_no_enviado">No pudimos enviar tu mensaje</string>
    <string name="messages_enviado">Mensaje Enviado</string>
    <string name="enviar_mensaje">Enviar mensaje a tu médico</string>
    <string name="title_activity_inbox_details">Monitora</string>
    <string name="Respuesta">response</string>
    <string name="respuesta">Enviar Respuesta</string>
    <string name="porfavor_encienda_el_dispositivo">Por favor encienda el dispositivo</string>
    <string name="Obteniendo_Muestra">Obteniendo Muestra</string>
    <string name="Fecha">Fecha</string>
    <string name="PI">PI</string>
    <string name="paciente_dijo">El paciente se siente:</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="sesion">Sesión</string>
    <string name="salir">Salir</string>
    <string name="datos_enviados">Oximetria Registrada</string>
</resources>
